--- a/.drone.yml
+++ b/.drone.yml
@@ -16,7 +16,7 @@ build:
       - go get -u github.com/go-openapi/jsonpointer
       - go get -u github.com/go-openapi/spec
       - go get -u github.com/go-openapi/loads/fmts
-      - go test -race
+      - go test -race ./...
       - go test -v -cover -coverprofile=coverage.out -covermode=count ./...
 
 notify:
