--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ install:
 - go get -u github.com/go-openapi/swag
 - go get -u github.com/go-openapi/jsonpointer
 - go get -u github.com/go-openapi/spec
+- go get -u github.com/go-openapi/strfmt
 - go get -u github.com/go-openapi/loads/fmts
 script:
 - go test -v -race -cover -coverprofile=coverage.txt -covermode=atomic ./...
