--- a/fixtures/patterns.yml
+++ b/fixtures/patterns.yml
@@ -8,17 +8,15 @@ parameters:
   idParam:
     name: id
     in: path
-    type: integer
-    format: int32
-  limitParam:
-    name: limit
-    in: query
-    type: integer
-    format: int32
-    required: false
+    type: string
+    pattern: 'a[A-Za-Z0-9]+'
 
 responses:
   notFound:
+    headers:
+      ContentLength:
+        type: string
+        pattern: '[0-9]+'
     schema:
       $ref: "#/definitions/error"
 
@@ -26,23 +24,30 @@ paths:
   "/some/where/{id}":
     parameters:
       - $ref: "#/parameters/idParam"
-
+      - name: name
+        in: query
+        pattern: 'b[A-Za-z0-9]+'
       - name: bodyId
         in: body
         schema:
           type: object
     get:
       parameters:
-      - $ref: "#/parameters/limitParam"
+      - name: filter
+        in: query
+        type: string
+        pattern: "[abc][0-9]+"
       - name: other
         in: query
         type: array
         items:
-          $ref: "#/definitions/named"
+          type: string
+          pattern: 'c[A-Za-z0-9]+'
       - name: body
         in: body
         schema:
           type: object
+            
       responses:
         default:
           schema:
@@ -50,14 +55,43 @@ paths:
         404:
           $ref: "#/responses/notFound"
         200:
+          headers:
+            X-Request-Id:
+              type: string
+              pattern: 'd[A-Za-z0-9]+'
           schema:
             $ref: "#/definitions/tag"
   "/other/place":
-    $ref: "#/x-shared-path/getItems"
+    post:
+      parameters:
+        - name: body
+          in: body
+          schema:
+            type: object
+            properties:
+              value:
+                type: string
+                pattern: 'e[A-Za-z0-9]+'
+      responses:
+        default:
+          headers:
+            Via:
+              type: array
+              items:
+                type: string
+                pattern: '[A-Za-z]+'
+        200:
+          schema:
+            type: object
+            properties:
+              data:
+                type: string
+                pattern: "[0-9]+[abd]"
 
 definitions:
   named:
     type: string
+    pattern: 'f[A-Za-z0-9]+'
   tag:
     type: object
     properties:
@@ -66,6 +100,7 @@ definitions:
         format: int64
       value:
         type: string
+        pattern: 'g[A-Za-z0-9]+'
       audit:
         $ref: "#/definitions/record"
   record:
