Fix flatten with pointers containing escaped chars (e.g. '{}'
Fixed undue duplicate name detection when resolving remote refs

Improves behavior in edge cases where schemas points to responses
or parameters.

This makes the flatten behavior consistent with swagger validate.

* now unmarshals the struct as a schema: if this works, flattening
moves on, with a warning to the user (as this is valid but most
likely unintended)
* improves go-swagger/go-swagger#1602 and go-swagger/go-swagger#1614
* contributes go-swagger/go-swagger#1621
* Expand schemas when $ref'ed to (shared) responses or parameters

* Added internal pre go1.8 PathUnescape (like in go-openapi/swag)
* Added test hack for coverage with multiple packages

Added test config in CI for package internal

* Removed CI test with go 1.7
  This commit remains compatible with go1.7, but some dependencies
  (i.e. github.com/asaskevich/govalidator) are no more compatible
  using master

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,13 @@
 language: go
 go:
-- 1.7
 - 1.8
 - 1.9
 - 1.10.x
 install:
+- go get -u github.com/axw/gocov/gocov
+- go get -u gopkg.in/matm/v1/gocov-html
+- go get -u github.com/cee-dub/go-junit-report
+- go get -u github.com/docker/go-units
 - go get -u github.com/stretchr/testify/assert
 - go get -u gopkg.in/yaml.v2
 - go get -u github.com/go-openapi/swag
@@ -13,7 +16,7 @@ install:
 - go get -u github.com/go-openapi/strfmt
 - go get -u github.com/go-openapi/loads/fmts
 script:
-- go test -v -race -cover -coverprofile=coverage.txt -covermode=atomic ./...
+- hack/coverage
 after_success:
 - bash <(curl -s https://codecov.io/bash)
 notifications:
