fix(flatten): iterate remote ref resolve
NOTE:
Flatten now resolves remote $ref iteratively, without expanding.

This allows for keeping definitions unexpanded and reused by referers positioned at different nesting levels.

Contributes go-swagger/go-swagger#1851

Signed-off-by: Frederic BIDON <fredbi@yahoo.com>

Added go1.12 to travis CI

Signed-off-by: Frederic BIDON <fredbi@yahoo.com>

--- a/fixtures/external_definitions_valid.yml
+++ b/fixtures/external_definitions_valid.yml
@@ -29,8 +29,9 @@ paths:
       - name: other
         in: query
         type: array
+        # $ref in parameter array items is not swagger 2.0 compliant
         items:
-          $ref: "external/definitions.yml#/definitions/named"
+          type: string
       - name: body
         in: body
         schema:
