--- a/.golangci.yml
+++ b/.golangci.yml
@@ -4,7 +4,7 @@ linters-settings:
   golint:
     min-confidence: 0
   gocyclo:
-    min-complexity: 30
+    min-complexity: 40
   maligned:
     suggest-new: true
   dupl:
@@ -17,5 +17,6 @@ linters:
   enable-all: true
   disable:
     - maligned
+    - lll
     - gochecknoglobals
     - gochecknoinits
