Don't use go-openapi/loads from this package
Because Go doesn't differentiate test dependencies from normal
dependencies, this package depends on go-openapi/loads, while
it depends on this package.

This change breaks the cyclic dependency by having
go-openapi/analysis/analysis_test package.

Fixes #74.

Signed-off-by: Kazuyoshi Kato <katokazu@amazon.com>

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -27,6 +27,10 @@ jobs:
     - name: Test
       run: gotestsum --format short-verbose -- -race -timeout=20m -coverprofile=coverage_txt -covermode=atomic ./...
 
+
+    - name: analysis_test
+      run: cd analysis_test && go test
+
     - uses: codecov/codecov-action@v2
       with:
         files: coverage_txt
