--- a/.github/workflows/go-test.yml
+++ b/.github/workflows/go-test.yml
@@ -18,6 +18,7 @@ jobs:
         with:
           version: latest
           only-new-issues: true
+          skip-cache: true
 
   test:
     name: Unit tests
