tests: added unit tests to the internal packages
This recovers a bit of the loss of test coverage ratio after accounting
for all source files.

Signed-off-by: Frederic BIDON <fredbi@yahoo.com>

--- a/fixtures/errors/fixture-unexpandable-2.yaml
+++ b/fixtures/errors/fixture-unexpandable-2.yaml
@@ -32,6 +32,22 @@ paths:
           description: OK
           schema:
             $ref: '#/thisIs/anAbitrary/jsonPointer/toNowhere'
+  /wrong:
+    get:
+      operationId: target type mismatch
+      responses:
+        '200':
+          description: OK
+          schema:
+            $ref: '#/parameters/someWhere'
+  /wrongcode:
+    get:
+      operationId: target type mismatch
+      responses:
+        'two-hundred':
+          description: OK
+          schema:
+            type: string
 definitions:
   somePlace:
     type: string
