--- a/.golangci.yml
+++ b/.golangci.yml
@@ -16,6 +16,7 @@ linters:
     - godox
     - gosmopolitan
     - inamedparam
+    - intrange # disabled while < go1.22
     - ireturn
     - lll
     - musttag
@@ -24,6 +25,7 @@ linters:
     - noinlineerr
     - nonamedreturns
     - paralleltest
+    - recvcheck
     - testpackage
     - thelper
     - tparallel
@@ -62,3 +64,12 @@ formatters:
       - third_party$
       - builtin$
       - examples$
+issues:
+  # Maximum issues count per one linter.
+  # Set to 0 to disable.
+  # Default: 50
+  max-issues-per-linter: 0
+  # Maximum count of issues with the same text.
+  # Set to 0 to disable.
+  # Default: 3
+  max-same-issues: 0
