--- a/.github/workflows/scanner.yml
+++ b/.github/workflows/scanner.yml
@@ -11,7 +11,7 @@ permissions:
   contents: read
 
 jobs:
-  release:
+  scanners:
     permissions:
       contents: read
       security-events: write
